added tests for the calc and auth logic. also perform some fixes on README
